# vda5050_msgs

./: README.md
vda5050_msgs/: CMakeLists.txt
vda5050_msgs/msg/: Connection.msg  Factsheet.msg  InstantActions.msg  Lif.msg  Order.msg  State.msg  Visualization.msg
vda5050_msgs/msg/common/: Action.msg  AgvPosition.msg  BoundingBoxReference.msg  ControlPoint.msg  LoadDimensions.msg  NodePosition.msg  Trajectory.msg  Velocity.msg
vda5050_msgs/msg/factsheet/: ActionParameterDefinition.msg  AgvAction.msg  Envelope2D.msg  Envelope3D.msg  LoadSet.msg  MaxArrayLens.msg  MaxArrayLens.msg.old  MaxArrayLensActions.msg  MaxArrayLensEdge.msg  MaxArrayLensError.msg  MaxArrayLensInfo.msg  MaxArrayLensNode.msg  MaxArrayLensOrder.msg  MaxArrayLensState.msg  MaxArrayLensTrajectory.msg  MaxStringLens.msg  OptionalParameter.msg  Position.msg  ProtocolFeatures.msg  Timing.msg  TypeSpecification.msg  WheelDefinition.msg
vda5050_msgs/msg/lif/: Layout.msg  LifAction.msg  LifEdge.msg  LifNode.msg  LoadRestriction.msg  MetaInformation.msg  Station.msg  StationPosition.msg  VehicleTypeEdgeProperty.msg  VehicleTypeNodeProperty.msg
vda5050_msgs/msg/order/: Edge.msg  Node.msg
vda5050_msgs/msg/state/: ActionState.msg  BatteryState.msg  EdgeState.msg  Error.msg  Info.msg  Load.msg  NodeState.msg  SafetyState.msg
